--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "normalize.css": "^8.0.0",
     "react": "^16.2.0",
+    "react-day-picker": "^7.0.7",
     "react-dom": "^16.2.0",
     "react-flexbox-grid": "^2.0.0",
     "react-scripts": "1.1.1",
@@ -15,5 +16,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "typescript": "^2.7.1",
+    "typescript-styled-plugin": "^0.5.0"
   }
 }
