--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "date-fns": "^1.29.0",
     "normalize.css": "^8.0.0",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-clickoutside": "^2.0.0",
     "react-day-picker": "^7.0.7",
@@ -23,6 +24,13 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.2",
+    "eslint": "^4.18.2",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-fp": "^2.3.0",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-react": "7.4.0",
     "typescript": "^2.7.1",
     "typescript-styled-plugin": "^0.5.0"
   }
