--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,7 @@
 {
   "parser": "babel-eslint",
-  "extends": "airbnb",
+  "extends": ["airbnb"],
   "rules": {
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "strict": 0
+    "react/jsx-filename-extension": "off"
   }
 }
