--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "date-fns": "^1.29.0",
+    "lodash": "^4.17.5",
     "normalize.css": "^8.0.0",
     "prop-types": "^15.6.1",
     "rc-slider": "^8.6.1",
